--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['https://www.paypal.com/donate?hosted_button_id=8ZU9XXUWAU2K8']
+custom: ['https://www.paypal.com/donate/?hosted_button_id=RBDYVJWMUA3JN']
